# AltairEverywhere

./: .gitignore  .gitmodules  .stats_timestamp  404.html  LICENSE  README.md  altair.env  altair_terminal.service  gitignore  index.html  sitemap.xml  start_altair.sh
AltairHL_emulator/: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  altair_config.c  altair_config.cmake  altair_config.h  altair_panel.h  app_exit_codes.h  app_manifest.json  archive.txt  comms_manager_wolf.c  comms_manager_wolf.c.old  comms_manager_wolf.h  cpu_monitor.c  cpu_monitor.h  curldefs.h  difference_disk.h  env_air_visual.c  env_air_visual.h  env_open_weather_map.c  env_open_weather_map.h  environment.c  environment.h  environment_types.h  httpGet.c  httpGet.h  io_ports.c  io_ports.h  iotc_manager.c  iotc_manager.h  launch.vs.json  location_from_ip.c  location_from_ip.h  main.c  main.h  mqtt_manager.c  mqtt_manager.h  onboard_sensors.c  onboard_sensors.h  (+11 more)
AltairHL_emulator/.github/prompts/: bds-c.prompt.md
AltairHL_emulator/Altair8800/: 88dcdd.c  88dcdd.h  8krom.h  intel8080.c  intel8080.h  memory.c  memory.h
AltairHL_emulator/AppSamples/: breakout.c  gf.c  json.c  pong.c  tictactoe.bas  weather.c
AltairHL_emulator/AzureSphereDevX/: CMakeLists.txt  README.md
AltairHL_emulator/AzureSphereDevX/include/: dx_avnet_iot_connect.h  dx_azure_iot.h  dx_config.h  dx_deferred_update.h  dx_device_twins.h  dx_direct_methods.h  dx_exit_codes.h  dx_gpio.h  dx_i2c.h  dx_intercore.h  dx_intercore_contract.h  dx_json_serializer.h  dx_pwm.h  dx_terminate.h  dx_timer.h  dx_uart.h  dx_utilities.h  dx_version.h  eventloop_timer_utilities.h
AltairHL_emulator/AzureSphereDevX/src/: dx_avnet_iot_connect.c  dx_azure_iot.c  dx_config.c  dx_deferred_update.c  dx_device_twins.c  dx_direct_methods.c  dx_gpio.c  dx_i2c.c  dx_intercore.c  dx_json_serializer.c  dx_pwm.c  dx_terminate.c  dx_timer.c  dx_uart.c  dx_utilities.c  eventloop_timer_utilities.c
AltairHL_emulator/BasicSamples/: A.BAS  ANOMALY.BAS  COUNT.BAS  FONT.BAS  IOT.BAS  J.BAS  JITTER.BAS  JSON.BAS  LOOPY.BAS  TIME.BAS  WEATHER.BAS
AltairHL_emulator/CopyX/: COPYX.C  HW.C  SLEEP.ASM
AltairHL_emulator/Disks/: LICENSE  README.md  bdsc.dsk  cpm63k.dsk
AltairHL_emulator/Drivers/: README.md
AltairHL_emulator/Drivers/AVNET/HL/: CMakeLists.txt  imu_temp_pressure.c  imu_temp_pressure.h  light_sensor.c
AltairHL_emulator/Drivers/CLICK_4x4_KEY_74HC165/: 74HC165.c  CMakeLists.txt
AltairHL_emulator/Drivers/CLICK_8800_RETRO_AS1115/: CMakeLists.txt  as1115.c  graphics.c
AltairHL_emulator/Drivers/CLICK_8x8_LED_MAX7219/: max7219.h
AltairHL_emulator/Drivers/CLICK_EEPROM2/: CMakeLists.txt  eeprom2.c  eeprom2.h
AltairHL_emulator/Drivers/EmbeddedScd30/: CMakeLists.txt
AltairHL_emulator/Drivers/EmbeddedScd30/embedded-common/hw_i2c/: sensirion_hw_i2c_implementation.c
AltairHL_emulator/Drivers/EmbeddedScd30/scd30/: scd30.c
AltairHL_emulator/Drivers/GRAPHICS_8x8/: graphics.c  graphics.h
AltairHL_emulator/Drivers/GROVE_16x2_RGB_LCD/: CMakeLists.txt  rgb_lcd.c  rgb_lcd.h  utils.h
AltairHL_emulator/Drivers/GROVE_HM3301/: CMakeLists.txt  README.md  hm330x.c  hm330x.h
AltairHL_emulator/Drivers/embedded-i2c-scd4x/: sensirion_i2c_hal.c  sensirion_i2c_hal.h
AltairHL_emulator/Drivers/examples/8800_RETRO_CLICK/: .gitignore  CMakeLists.txt  app_manifest.json  launch.vs.json  main.c
AltairHL_emulator/Drivers/front_panel/: dx_gpio.c  dx_gpio.h  graphics.h
AltairHL_emulator/Drivers/pi_sense_hat/: LICENCE.txt  graphics.c  graphics.h  led_panel.c  led_panel.h
AltairHL_emulator/Drivers/pi_sense_hat/GRAPHICS_8x8/: graphics.c  graphics.h
AltairHL_emulator/Drivers/sensehat-driver/: README.md
AltairHL_emulator/Drivers/sensehat-driver/demo/: demo.c
AltairHL_emulator/FrontPanels/: front_panel_click.c  front_panel_kit.c  front_panel_kit.h  front_panel_none.h  front_panel_pi_sense_hat.c  front_panel_pi_sense_hat.h  front_panel_retro_click.c  front_panel_retro_click.h  front_panel_virtual.c  front_panel_virtual.h  pi_sense_hat.c  pi_sense_hat.h
AltairHL_emulator/PortDrivers/: azure_io.c  azure_io.h  file_io.c  file_io.h  led_matrix_io.c  led_matrix_io.h  onboard_io.c  onboard_io.h  openai.c  power_io.c  power_io.h  time_io.c  time_io.h  utility_io.c  utility_io.h  weather_io.c  weather_io.h
AltairHL_emulator/certs/: client.crt  client.csr  client.key
AltairHL_emulator/cmake/: altair_config.cmake
AltairHL_emulator/wolfMQTT/: Evaluation_LICENSE
AltairHL_emulator/wolfMQTT/examples/: mqttexample.c  mqttexample.h
AltairHL_emulator/wolfMQTT/src/: mqtt_packet.c  mqtt_socket.c
AltairHL_emulator/wolfMQTT/wolfmqtt/: mqtt_types.h
Altair_emulator/Drivers/CLICK_8x8_LED_MAX7219/: CMakeLists.txt  max7219.c
src/: .clang-format  .gitignore  CMakeLists.txt  altair_config.c  altair_config.h  altair_panel.h  app_exit_codes.h  cpu_monitor.c  cpu_monitor.h  difference_disk.c  env_air_visual.c  env_air_visual.h  env_open_weather_map.c  env_open_weather_map.h  environment.c  environment.h  io_ports.c  iotc_manager.h  location_from_ip.h  main.c  main.h  utils.c  web_console.c  web_console.h  web_socket_server.h
src/.github/prompts/: bds-c.prompt.md
src/Altair8800/: 4kbas32.h  88dcdd.c  88dcdd.h  op_codes.h
src/AppSamples/: breakout.c  dx.c  dxtimer.c  gf.c  json.c  key.c  onboard.c  rainbow.bas  snake.c  stdio.h  tetris.c  vibe.asm  weather.c
src/AppSamples/sdk/: LONG.C  dxterm.c  dxtimer.c
src/CopyX/: COPY.C  COPYX.C  LOOP.BAS
src/Drivers/pi_sense_hat/: graphics.h  led_panel.c  led_panel.h
src/Drivers/sensehat-driver/: makefile
src/Drivers/sensehat-driver/src/: sense_hat.c  sense_hat.h
src/Drivers/sensehat-driver/test/: test_sense_hat.cpp
src/FrontPanels/: front_panel_kit.c  front_panel_kit.h  front_panel_manager.c  front_panel_manager.h  front_panel_none.c  front_panel_none.h  front_panel_pi_sense_hat.c  front_panel_pi_sense_hat.h
src/PortDrivers/: file_io.c  file_io.h  led_matrix_io.c  onboard_io.c  onboard_io.h  openai.c  openai.h  time_io.c  time_io.h  utility_io.h  weather_io.c
src/bds-c-compiler/: readme.md
src/testTools/: websocket.py
(+231 files in other folders)
